--- a/project2/package.json
+++ b/project2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "targil-express",
+  "name": "project",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -8,16 +8,14 @@
     "test": "test .",
     "dev": "nodemon ."
   },
-  "keywords": [],
-  "author": "",
+  "author": "daniel ifrach",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "email-validator": "^2.0.4",
+    "axios": "^1.4.0",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "jsonfile": "^6.1.0",
-    "password-validator": "^5.3.0",
-    "uuid": "^9.0.0"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
